<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.quimify.organica</groupId>
    <artifactId>organica</artifactId>
    <version>1</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
            <groupId>opsin-es</groupId>
            <artifactId>opsin-es</artifactId>
            <scope>system</scope>
            <version>2.6.0</version>
            <systemPath>${project.basedir}/lib/opsin-es.jar</systemPath>
       </dependency>

        <dependency>
            <groupId>uk.ac.cam.ch.opsin</groupId>
            <artifactId>opsin-core</artifactId>
            <version>2.7.0</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.3</version>
        </dependency>

    </dependencies>

</project>
